<resources>
    <string name="app_name">Android Gmail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="gmail">Gmail</string>
    <string name="sign_up_link">New to Gmail? Sign up</string>
    <string name="create_an_account">Create an account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="login_link">Already have an account? Log in</string>
    <string name="birthdate">Birthdate</string>
    <string name="profile_image">Profile image</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="password_requirements">Password must contain at least 8 characters, both letters and digits</string>
    <string name="title_activity_test">Test</string>
    <string name="compose_button">Compose</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent">Sent</string>
    <string name="drafts">Drafts</string>
    <string name="spam">Spam</string>
    <string name="trash">Trash</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="labels">Labels</string>
    <string name="label_as">Label as</string>
    <string name="no_labels_found">No labels found</string>
    <string name="add_label">Add new label</string>
    <string name="edit_label_name">Edit label name</string>
    <string name="update">Update</string>
    <string name="label_name">Label Name</string>
    <string name="more_options">More options</string>
    <string name="label_icon">Label icon</string>
</resources>