<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginScreen">

    <!--Logo area-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/green_logo"
            android:contentDescription="@string/app_name"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmail"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/logo"/>
    </LinearLayout>

    <!-- Email field -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <!-- Password field -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <!-- Login button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:backgroundTint="@color/login_button_bg"
        android:textColor="@color/login_button_text"/>

    <TextView
        android:id="@+id/signupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_link"
        android:textColor="#1A73E8"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:autoLink="none"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
