<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_label"
        android:contentDescription="@string/label_icon" />

    <TextView
        android:id="@+id/label_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:textColor="?android:attr/textColorPrimary"
        android:text="@string/label_name"
        android:textSize="15sp"
        android:ellipsize="end"
        android:maxLines="1" />

    <ImageButton
        android:id="@+id/label_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/more_options"
        android:padding="8dp"
        android:src="@drawable/ic_more"
        tools:ignore="TouchTargetSizeCheck" />
</LinearLayout>
